[imad-console] Updates ui/styles.css

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -3,3 +3,13 @@ body {
     background-color: black;
     margin-top: 75px;
 }
+ .container{
+                 max-width: 800px;
+                 margin: 0 auto;
+                 COLOR: #820d96;
+    font-family: cursive;
+    padding-top: 50px;
+    padding-right: 20px;
+    padding-left: 20px;
+    
+             }
