--- a/ui/style.css
+++ b/ui/style.css
@@ -20,8 +20,8 @@ body {
     height: 200px;
 }
 .btn{
-    width: 100px;
-    height: 30px;
+    width: auto;
+    height: auto;
     background-color:#820d96;
     border: solid 1px #820d96 ;
     border-radius: 5px;
