--- a/ui/styles.css
+++ b/ui/styles.css
@@ -2,6 +2,8 @@ body {
     font-family: cursive;
     background-color: black;
     margin-top: 75px;
+    z-index: -1;
+ 
 }
  .container{
                  max-width: 800px;
